--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- General-->
+    <!-- General -->
     <string name="app_name">NerdZoo</string>
     <string name="fragment_zoo_textview_empty">Add an animal!</string>
+
+    <!-- Transitions -->
+    <string name="transition_animal_image">transitionAnimalImage</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
