--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,20 +10,19 @@
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
-        <item >Home</item>
+        <item >My Zoo</item>
         <item >About</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
     <array name="nav_drawer_icons">
-        <item>@android:drawable/ic_menu_myplaces</item>
-        <item>@android:drawable/ic_menu_info_details</item>
+        <item>@drawable/drawer_item_home</item>
+        <item>@drawable/drawer_item_about</item>
     </array>
 
     <!-- Menus -->
-    <string name="menu_zoo_add">Add</string>
+    <string name="menu_zoo_refresh">Refresh</string>
     <string name="menu_zoo_clear">Clear</string>
-    <string name="menu_animal_remove">Remove</string>
 
     <!-- Animals -->
     <string name="animal_lion">Lion</string>
